@@ -1,8 +1,4 @@
 # -*- cperl -*-
-# $Author$
-# $Date$
-# $Name: not supported by cvs2svn $
-# $Revision$
 
 use warnings FATAL => qw(all);
 use ExtUtils::testlib;
